conf strategy list run

--- a/rank-predict/pom.xml
+++ b/rank-predict/pom.xml
@@ -8,18 +8,19 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <groupId>myrec</groupId>
-  <artifactId>rank-data</artifactId>
+  <artifactId>rank-predict</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>rank-data</name>
+  <name>rank-predict</name>
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-  <dependencies> 
-		<dependency>
-			<groupId>myrec</groupId>
-			<artifactId>rank-base</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>  
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
