--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <module>rank-base</module>
     <module>rank-data</module>
     <module>rank-strategy</module>
+    <module>rank-predict</module>
   </modules>
   <properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
