--- a/rank-predict/pom.xml
+++ b/rank-predict/pom.xml
@@ -1,26 +1,32 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>myrec</groupId>
-    <artifactId>rank-rec</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <groupId>myrec</groupId>
-  <artifactId>rank-predict</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>rank-predict</name>
-  <url>http://maven.apache.org</url>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>myrec</groupId>
+		<artifactId>rank-rec</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+	<groupId>myrec</groupId>
+	<artifactId>rank-predict</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>rank-predict</name>
+	<url>http://maven.apache.org</url>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>biz.k11i</groupId>
+			<artifactId>xgboost-predictor</artifactId>
+			<version>0.3.0</version>
+		</dependency>
+		<dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>23.0</version>
+            </dependency>
+	</dependencies>
 </project>
